# obs-studio

./: .cirrus.yml  .gersemirc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.rst  buildspec.json
.github/actions/build-obs/: action.yaml
.github/actions/package-obs/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/actions/upload-debug-symbols/: action.yaml
.github/actions/windows-analysis/: obs.pvsconfig
.github/scripts/: .build.zsh  Build-Windows.ps1  Create-Archive.ps1  check-cmake.sh  check-format.sh
.github/scripts/utils.zsh/: setup_ubuntu
.github/workflows/: build-project.yaml  clang-format.yml  main-streamlabs.yml  main.yml  pr-pull.yaml  push.yaml
CI/macos/: fix_deps_paths.sh
UI/: CMakeLists.txt  hotkey-edit.cpp  obs-app.cpp  volume-control.cpp  window-basic-auto-config-test.cpp  window-basic-main-outputs.hpp  window-basic-settings.cpp  window-remux.hpp
UI/cmake/: legacy.cmake
UI/cmake/macos/: entitlements-extension.plist  exportOptions-extension.plist.in
UI/frontend-plugins/aja-output-ui/: aja-ui-main.cpp
build-aux/: .run-format.zsh
build-aux/steam/scripts_windows/: install.bat
cmake/Modules/: ObsDefaults_macOS.cmake  ObsHelpers_Windows.cmake
cmake/common/: buildspec_common.cmake  helpers_common.cmake
cmake/finders/: FindFFmpeg.cmake
cmake/macos/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake
cmake/windows/: architecture.cmake  buildspec.cmake  defaults.cmake  helpers.cmake
dependencies/: chrome_elf.dll.txt  decklink.dll.txt  libcef.dll.txt  libobs-winrt.dll.txt  obs-browser.dll.txt  obs-frontend-api.dll.txt  obs-nvenc-test.exe.txt  obs-nvenc.dll.txt  obs-outputs.dll.txt  sl-bgblur-filter.dll.txt
docs/sphinx/: reference-properties.rst
frontend/: OBSApp.cpp
frontend/data/locale/: ru-RU.ini  tt-RU.ini
frontend/forms/: OBSYoutubeActions.ui
frontend/plugins/aja-output-ui/: aja-ui-main.cpp
frontend/settings/: OBSBasicSettings.cpp
frontend/utility/: BasicOutputHandler.cpp  BasicOutputHandler.hpp  system-info-macos.mm
frontend/widgets/: OBSBasic.cpp
frontend/wizards/: AutoConfigTestPage.cpp
libobs/: CMakeLists.txt  obs-audio-controls.c  obs-audio.c  obs-av1.c  obs-canvas.c  obs-cocoa.m  obs-config.h  obs-data.c  obs-defs.h  obs-display.c  obs-encoder.c  obs-ffmpeg-compat.h  obs-hevc.c  obs-hotkey.c  obs-hotkey.h  obs-internal.h  obs-module.c  obs-module.h  obs-output-delay.c  obs-output.c  obs-output.h  obs-properties.c  obs-properties.h  obs-scene.c  obs-scene.h  obs-service.c  obs-source-transition.c  obs-source.c  obs-source.h  obs-video-gpu-encode.c  obs-video.c  obs-view.c  obs-win-crash-handler.c  obs-windows.c  obs.c  obs.h
libobs-d3d11/: d3d11-rebuild.cpp  d3d11-shader.cpp  d3d11-subsystem.cpp
libobs-opengl/: CMakeLists.txt  IOSurfaceHelper.h  IOSurfaceHelper.m  gl-cocoa.m  gl-subsystem.c
libobs-winrt/: winrt-capture.cpp
libobs/audio-monitoring/win32/: wasapi-output.c
libobs/cmake/: libobsConfig.cmake.in  os-windows.cmake
libobs/graphics/: graphics-ffmpeg.c  graphics-imports.c  graphics-internal.h  graphics.c  graphics.h
libobs/media-io/: audio-io.c  audio-io.h  video-io.c  video-io.h
libobs/util/: base.c  base.h  bmem.c  bmem.h  cf-lexer.c  config-file.c  darray.h  pipe-posix.c  pipe-windows.c  platform.c  platform.h  threading-windows.c
libobs/util/windows/: window-helpers.c  window-helpers.h
plugins/: CMakeLists.txt
plugins/coreaudio-encoder/: encoder.cpp  windows-imports.h
plugins/image-source/: obs-slideshow.c
plugins/mac-avcapture/: OBSAVCapture.m  plugin-main.m
plugins/mac-avcapture/legacy/: av-capture.mm
plugins/mac-capture/: mac-audio.c  mac-display-capture.m  mac-sck-common.m  mac-sck-video-capture.m
plugins/mac-syphon/: syphon.m
plugins/mac-videotoolbox/: encoder.c
plugins/mac-virtualcam/src/obs-plugin/: CMakeLists.txt  plugin-main.mm
plugins/nv-filters/: nvidia-audiofx-filter.c  nvvfx-load.h
plugins/obs-ffmpeg/: obs-ffmpeg-av1.c  obs-ffmpeg-compat.h  obs-ffmpeg-hls-mux.c  obs-ffmpeg-mpegts.c  obs-ffmpeg-mux.c  obs-ffmpeg-nvenc.c  obs-ffmpeg-output.c  obs-ffmpeg-output.h  obs-ffmpeg-source.c  obs-ffmpeg-vaapi.c  obs-ffmpeg-video-encoders.h  obs-ffmpeg.c  texture-amf.cpp
plugins/obs-ffmpeg/cmake/: dependencies.cmake
plugins/obs-ffmpeg/ffmpeg-mux/: ffmpeg-mux.c
plugins/obs-filters/: hdr-tonemap-filter.c  noise-suppress-filter.c  scale-filter.c  scroll-filter.c
plugins/obs-nvenc/: nvenc-cuda.c  nvenc-d3d11.c  nvenc.c
plugins/obs-outputs/: flv-mux.c  flv-output.c  mp4-output.c  null-output.c  rtmp-stream.c  rtmp-stream.h
plugins/obs-outputs/librtmp/: rtmp.c
plugins/obs-qsv11/: QSV_Encoder.cpp  QSV_Encoder.h  obs-qsv11.c
plugins/obs-text/gdiplus/: obs-text.cpp
plugins/obs-transitions/: CMakeLists.txt  transition-cut.c  transition-fade-to-color.c  transition-fade.c  transition-luma-wipe.c  transition-shuffle.c  transition-slide.c  transition-stinger.c  transition-swipe.c
plugins/obs-x264/: obs-x264.c
plugins/rtmp-services/: CMakeLists.txt
plugins/rtmp-services/data/: package.json  services.json
plugins/rtmp-services/service-specific/: service-ingest.c  twitch.c
plugins/sl-bgblur-filter/: CMakeLists.txt  submod.bat
plugins/text-freetype2/: text-freetype2.c
plugins/vlc-video/: vlc-video-plugin.h
plugins/win-capture/: CMakeLists.txt  duplicator-monitor-capture.c  game-capture-file-init.c  game-capture.c  plugin-main.c  screen-capture.c  window-capture.c
plugins/win-capture/get-graphics-offsets/: CMakeLists.txt
plugins/win-capture/graphics-hook/: CMakeLists.txt  d3d9-patches.hpp  graphics-hook.c
plugins/win-capture/inject-helper/: CMakeLists.txt
plugins/win-dshow/: CMakeLists.txt  SLcmake.txt.bak  dshow-plugin.cpp  shared-memory-queue.c  win-dshow-encoder.cpp  win-dshow.cpp
plugins/win-dshow/cmake/: libdshowcapture.cmake
plugins/win-wasapi/: CMakeLists.txt  enum-wasapi.cpp  enum-wasapi.hpp  plugin-main.cpp  win-wasapi.cpp
shared/bpm/: CMakeLists.txt
shared/properties-view/: properties-view.cpp
slobs_CI/: sentry-osx.py  win-build.cmd
(+101 files in other folders)
